kubernetes/apps/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devlinks-ingress
  namespace: devlinks
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-devlinks
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - devlinks.uk
        - www.devlinks.uk
        - backend.devlinks.uk
      secretName: devlinks-tls
  rules:
    - host: devlinks.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-svc
                port:
                  number: 80
    - host: backend.devlinks.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server-svc
                port:
                  number: 1111
